--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Cinzel");
 * {
      box-sizing: border-box;
 }
@@ -8,8 +7,101 @@ body {
      font-family: 'Cinzel', Arial, sans-serif;
 }
 
-body h1 {
+body #weather-form {
+     display: inline-block;
+     background-color: #fff;
+     border: 2px solid #000;
+     border-radius: 15px;
+     padding: 20px;
+     position: fixed;
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+}
+
+body #weather-form.hidden {
+     visibility: hidden;
+}
+
+body #weather-form #weather-header h1 {
      text-align: center;
+}
+
+body #weather-form #weather-body #weather-temps {
+     padding: 0;
+     margin: 0;
+}
+
+body #weather-form #weather-body #weather-temps #weather-condition {
+     display: inline-block;
+     height: 100%;
+     border-right: 2px solid #aaa;
+     text-align: center;
+     padding: 10px 20px;
+     margin: 0;
+     vertical-align: top;
+}
+
+body #weather-form #weather-body #weather-temps #weather-condition #weather-icon {
+     margin: 10px;
+     line-height: 1em;
+}
+
+body #weather-form #weather-body #weather-temps #weather-condition #conditions {
+     display: block;
+     font-size: 1em;
+     color: #424242;
+     text-align: center;
+     margin: 0 0 10px;
+}
+
+body #weather-form #weather-body #weather-temps #temp-main {
+     display: inline-block;
+     height: 100%;
+     text-align: center;
+     padding: 10px 0 10px 20px;
+     margin: 0;
+     vertical-align: top;
+}
+
+body #weather-form #weather-body #weather-temps #temp-main #temperature {
+     display: block;
+     line-height: 1em;
+     margin: 10px;
+     font-size: 4em;
+     cursor: pointer;
+}
+
+body #weather-form #weather-body #weather-temps #temp-main #feels-like {
+     display: block;
+     font-size: 1em;
+     color: #424242;
+     text-align: center;
+     margin: 0 0 10px;
+}
+
+body #weather-form #weather-body #weather-temps #range-today {
+     display: inline-block;
+     height: 100%;
+     text-align: center;
+     padding: 10px 0;
+     margin: 0;
+     vertical-align: top;
+}
+
+body #weather-form #weather-body #weather-temps #range-today #high-low {
+     margin: 30% 10px;
+}
+
+body #weather-form #weather-body #weather-temps #range-today #high-low #high {
+     border-bottom: 2px solid #aaa;
+     padding: 5px;
+     margin: 0;
+}
+
+body #weather-form #weather-body #weather-temps #range-today #high-low #low {
+     padding: 5px;
+     margin: 0;
 }
 
 body #footer #copyright {
