Make some tweaks to the CSS
Use some more variables to control font colors and divider colors, and
change the font.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,12 @@
+@import url("https://fonts.googleapis.com/css?family=Lato");
 * {
      box-sizing: border-box;
 }
 
 body {
      background-color: #1da1f2;
-     font-family: 'Cinzel', Arial, sans-serif;
+     font-family: 'Lato', Arial, sans-serif;
+     color: #000;
 }
 
 body #weather-form {
@@ -17,6 +19,7 @@ body #weather-form {
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
+     min-width: 400px;
 }
 
 body #weather-form.hidden {
@@ -35,7 +38,7 @@ body #weather-form #weather-body #weather-temps {
 body #weather-form #weather-body #weather-temps #weather-condition {
      display: inline-block;
      height: 100%;
-     border-right: 2px solid #aaa;
+     border-right: 2px solid #848484;
      text-align: center;
      padding: 10px 20px;
      margin: 0;
@@ -50,7 +53,7 @@ body #weather-form #weather-body #weather-temps #weather-condition #weather-icon
 body #weather-form #weather-body #weather-temps #weather-condition #conditions {
      display: block;
      font-size: 1em;
-     color: #424242;
+     color: #000;
      text-align: center;
      margin: 0 0 10px;
 }
@@ -75,7 +78,7 @@ body #weather-form #weather-body #weather-temps #temp-main #temperature {
 body #weather-form #weather-body #weather-temps #temp-main #feels-like {
      display: block;
      font-size: 1em;
-     color: #424242;
+     color: #000;
      text-align: center;
      margin: 0 0 10px;
 }
@@ -94,7 +97,7 @@ body #weather-form #weather-body #weather-temps #range-today #high-low {
 }
 
 body #weather-form #weather-body #weather-temps #range-today #high-low #high {
-     border-bottom: 2px solid #aaa;
+     border-bottom: 2px solid #848484;
      padding: 5px;
      margin: 0;
 }
@@ -104,20 +107,27 @@ body #weather-form #weather-body #weather-temps #range-today #high-low #low {
      margin: 0;
 }
 
+body #footer {
+     position: fixed;
+     bottom: 0;
+     left: 0;
+     right: 0;
+}
+
 body #footer #copyright {
      position: fixed;
      bottom: 10px;
      left: 10px;
-     color: #fff;
+     color: #000;
 }
 
 body #footer #footer-link {
      position: fixed;
      bottom: 10px;
      right: 10px;
-     color: #fff;
+     color: #000;
 }
 
 body #footer #footer-link:hover {
-     color: #fff;
+     color: #000;
 }
