--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1,8 +1,11 @@
 $background-color: #1da1f2;
 $weather-background: #fff;
 $border-color: #000;
+$font-color: #000;
+$divider-color: #848484;
 
-// @import url('https://fonts.googleapis.com/css?family=Cinzel');
+
+@import url('https://fonts.googleapis.com/css?family=Lato');
 
 * {
      box-sizing: border-box;
@@ -10,7 +13,8 @@ $border-color: #000;
 
 body {
      background-color: $background-color;
-     font-family: 'Cinzel', Arial, sans-serif;
+     font-family: 'Lato', Arial, sans-serif;
+     color: $font-color;
 
      #weather-form {
           display: inline-block;
@@ -22,6 +26,7 @@ body {
           top: 50%;
           left: 50%;
           transform: translate(-50%, -50%);
+          min-width: 400px;
 
           &.hidden {
                visibility: hidden;
@@ -45,7 +50,7 @@ body {
                     #weather-condition {
                          display: inline-block;
                          height: 100%;
-                         border-right: 2px solid #aaa;
+                         border-right: 2px solid $divider-color;
                          text-align: center;
                          padding: 10px 20px;
                          margin: 0;
@@ -59,7 +64,7 @@ body {
                          #conditions {
                               display: block;
                               font-size: 1em;
-                              color: #424242;
+                              color: $font-color;
                               text-align: center;
                               margin: 0 0 10px;
                          }
@@ -85,7 +90,7 @@ body {
                          #feels-like {
                               display: block;
                               font-size: 1em;
-                              color: #424242;
+                              color: $font-color;
                               text-align: center;
                               margin: 0 0 10px;
                          }
@@ -104,7 +109,7 @@ body {
                               margin: 30% 10px;
 
                               #high {
-                                   border-bottom: 2px solid #aaa;
+                                   border-bottom: 2px solid $divider-color;
                                    padding: 5px;
                                    margin: 0;
                               }
@@ -125,22 +130,26 @@ body {
      }
 
      #footer {
+          position: fixed;
+          bottom: 0;
+          left: 0;
+          right: 0;
 
           #copyright {
                position: fixed;
                bottom: 10px;
                left: 10px;
-               color: #fff;
+               color: $font-color;
           }
 
           #footer-link {
                position: fixed;
                bottom: 10px;
                right: 10px;
-               color: #fff;
+               color: $font-color;
 
                &:hover {
-                    color: #fff;
+                    color: $font-color;
                }
           }
 
