--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,9 +28,35 @@ body #weather-form.hidden {
 
 body #weather-form #weather-header h1 {
      text-align: center;
+     margin: 10px 0;
+}
+
+body #weather-form #unit-switch {
+     text-align: center;
+     margin-bottom: 10px;
+}
+
+body #weather-form #unit-switch #imperial,
+body #weather-form #unit-switch #metric {
+     display: inline-block;
+     margin: 5px;
+     font-size: 1em;
+     cursor: pointer;
+}
+
+body #weather-form #unit-switch #imperial.selected,
+body #weather-form #unit-switch #metric.selected {
+     color: blue;
+     font-weight: bold;
+     cursor: default;
+}
+
+body #weather-form #weather-body {
+     text-align: center;
 }
 
 body #weather-form #weather-body #weather-temps {
+     display: inline-block;
      padding: 0;
      margin: 0;
 }
@@ -46,8 +72,9 @@ body #weather-form #weather-body #weather-temps #weather-condition {
 }
 
 body #weather-form #weather-body #weather-temps #weather-condition #weather-icon {
+     display: block;
      margin: 10px;
-     line-height: 1em;
+     height: 64px;
 }
 
 body #weather-form #weather-body #weather-temps #weather-condition #conditions {
@@ -70,8 +97,9 @@ body #weather-form #weather-body #weather-temps #temp-main {
 body #weather-form #weather-body #weather-temps #temp-main #temperature {
      display: block;
      line-height: 1em;
+     height: 64px;
      margin: 10px;
-     font-size: 4em;
+     font-size: 64px;
      cursor: pointer;
 }
 
@@ -105,6 +133,16 @@ body #weather-form #weather-body #weather-temps #range-today #high-low #high {
 body #weather-form #weather-body #weather-temps #range-today #high-low #low {
      padding: 5px;
      margin: 0;
+}
+
+body #weather-form #weather-footer {
+     text-align: right;
+     margin-top: 20px;
+}
+
+body #weather-form #weather-footer #wunderground-logo {
+     width: 90px;
+     height: auto;
 }
 
 body #footer {
